cluster/default-backend/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: cluster
  name: default-backend
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/name: server
    app.kubernetes.io/part-of: cluster
  type: ClusterIP
