cluster/default-backend/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: cluster
  name: default-backend
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: ''
    http:
      paths:
      - backend:
          service:
            name: default-backend
            port:
              name: http
        path: /
        pathType: Prefix
